[package]
name = "uniasset"
version = "0.8.1"
edition = "2024"
license = "MIT"
documentation = "https://docs.rs/uniasset"
homepage = "https://github.com/rsmeowry/uniasset"
repository = "https://github.com/rsmeowry/uniasset"
description = "Unity ScriptableObject manipulation in Rust"
categories = ["game-development", "data-structures"]

[dependencies]
serde = {  version = "1.0.219", features = ["derive"] }
serde_yaml_ng = "0.10.0"
walkdir = "2.5.0"
thiserror = "2.0.12"

[dev-dependencies]
anyhow = "1.0.98"